# Duro.Workout-Log

./: CMakeLists.txt  README.md  access_functions.c  access_functions.h  auth.c  auth.h  core.h  excercises_list.txt  functions.h  main.c  mainfunc.c  settings.c  struct.h  tips_functions.c  tips_functions.h  write_functions.c  write_functions.h
training-diary-main/: CMakeLists.txt  README.md  adviceTraining.c  adviceTraining.h  checkTraining.c  checkTraining.h  createTraning.c  createTraning.h  main.c  questionDataBool.c  questionDataBool.h  removeTraining.c  removeTraining.h  struct.h  systemTech.c  systemTech.h  traningHooks.c  traningHooks.h
